--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "typescript": "^3.7.4",
-    "bcrypt": "^4.0.1"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "ci": "^1.0.0",
