--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
