--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "types": ["../@types"]
   },
   "lib": ["es2015"]
 }
