--- a/app-client/package.json
+++ b/app-client/package.json
@@ -16,9 +16,13 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.14",
+    "redux": "^4.0.5",
+    "redux-batched-subscribe": "^0.1.6",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "tachyons": "^4.10.0",
     "typescript": "^4.0.3",
@@ -49,7 +53,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-slick": "^0.23.4"
+    "@types/react-slick": "^0.23.4",
+    "@types/redux-batched-subscribe": "^0.1.4"
   }
 }
